# OS_project

./: README.md  live_dashboard.py  main_code  main_code.c  mock_carbon_api.py  scheduler_rest_dynamic  submit_tasks.py
legacy_c_code/: Updated_scheduler.c  os.c
os_rust/: Cargo.toml
os_rust/src/: main.rs
