[package]
name = "os_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
shlex = "1.3"
libc = "0.2"
ctrlc = "3.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4.44"

